feat: add support to google auth
